--- a/mysite/views/user/join.ejs
+++ b/mysite/views/user/join.ejs
@@ -9,6 +9,8 @@
 	<div id="container">
 	
 		<%-include('../includes/header') %>
+		<% applicationName %>
+		
 		<div id="content">
 			<div id="user">
 
