--- a/mysite/views/user/join.ejs
+++ b/mysite/views/user/join.ejs
@@ -9,12 +9,11 @@
 	<div id="container">
 	
 		<%-include('../includes/header') %>
-		<% applicationName %>
-		
+
 		<div id="content">
 			<div id="user">
 
-				<form id="join-form" name="joinForm" method="" action="">
+				<form id="join-form" name="joinForm" method="post" action="/user/join">
 					<label class="block-label" for="name">이름</label>
 					<input id="name" name="name" type="text" value="">
 
